force-app/main/default/objects/Log_Time__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Week of</label>
    <type>Date</type>
</CustomField>