force-app/main/default/objects/Log_Time__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Time Logs</relationshipLabel>
    <relationshipName>Time_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>