force-app/main/default/objects/Log_Time__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Time_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>